--- a/style.css
+++ b/style.css
@@ -226,9 +226,10 @@
     float: left;
     border: 2px solid black;
     border-radius: 10px;
-    margin-top: 5px;
+    height: 270px;
+    margin-top: 5%;
     margin-left: 60px;
-    max-height: 450px;
+    max-height: 420px;
 }
 
 .miras h4{
@@ -671,6 +672,7 @@
     .bardak{
         margin-left: 30px;
         margin-top: 30px;
+        height: 90%;
     }
     #cayBardagiBaslik{
         margin-left: 95px;
